<resources>
    <string name="app_name">PanganSehat</string>
    <string name="welcome">Welcome to Pangan Sehat</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mobile_optional">Mobile (optional)</string>
    <string name="password">Password</string>

    <string name="txt_clickable">Sign Up</string>
    <string name="txt_click2">Go to login</string>

    <string name="txt_acc_empty">Dont Have An Account?</string>
    <string name="txt_acc_empty2">Already Have An Account?</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="user">User</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="balance">Balance</string>
    <string name="settings">Settings</string>
    <string name="top_up">Top Up</string>
    <string name="gluten_free_bread">Gluten Free Bread</string>
    <string name="_0_0">0.0</string>
    <string name="gluten_free">gluten-free</string>
    <string name="rp100_000">Rp100.000</string>
    <string name="recommmendations">Recommmendations</string>

    <string-array name="locations">
        <item>Jakarta Selatan</item>
        <item>Batam</item>
        <item>Bekasi</item>
        <item>Makassar</item>
    </string-array>

</resources>