<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical">

    <!-- Rectangle 160 -->
    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/background_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="123dp"
        android:background="@drawable/rectangle_1"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="135dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp32"
                android:layout_marginTop="@dimen/dp22"
                android:textStyle="bold"
                android:text="Create \nAccount"
                android:textColor="#2d2d2d"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_judul"
                android:orientation="vertical"
                android:padding="@dimen/dp32">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edt_signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_floatingLabel="highlight"
                    android:textColorHighlight="#BABABA"
                    app:met_primaryColor="#1DC879"
                    android:hint="@string/username"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edt_signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_floatingLabel="highlight"
                    android:textColorHighlight="#BABABA"
                    app:met_primaryColor="#1DC879"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edt_signup_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_floatingLabel="highlight"
                    android:textColorHighlight="#BABABA"
                    app:met_primaryColor="#1DC879"
                    android:hint="@string/mobile_optional"
                    android:inputType="number"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edt_signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_floatingLabel="highlight"
                    android:textColorHighlight="#BABABA"
                    app:met_primaryColor="#1DC879"
                    android:hint="@string/password" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginTop="14dp"
                    android:backgroundTint="#1DC879"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp32"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account?"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp4"
                        android:textColor="#1DC879"
                        android:text="Go to login"/>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>