<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="128dp"
        android:layout_height="224dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_img_item"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:scaleType="centerCrop"
                android:src="@drawable/roti" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_img_item"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:textColor="#101010"
                android:text="@string/gluten_free_bread"
                 />

            <LinearLayout
                android:id="@+id/linear_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginStart="6dp"
                android:layout_below="@id/tv_item_name">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:src="@drawable/star"/>

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#101010"
                    android:layout_marginStart="2dp"
                    android:text="@string/_0_0"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4"
                android:layout_marginStart="6dp"
                android:layout_below="@id/linear_rating"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/tags_diet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="#FFECE5"
                    app:cardCornerRadius="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="diet"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="#F85E2D"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="1dp"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/tags_gluten_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:layout_marginStart="@dimen/dp4"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="#FFE5E5"
                    app:cardCornerRadius="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gluten_free"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="#F30000"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="1dp"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_tags"
                android:layout_marginStart="6dp"
                android:layout_marginTop="@dimen/dp4"
                android:textColor="#101010"
                android:text="@string/rp100_000"/>




        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>