<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp">

        <ImageView
            android:id="@+id/ic_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_location"/>

        <Spinner
            android:id="@+id/location_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/locations"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_balance"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/location">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_balance"
            >

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="12dp"
                android:text="@string/balance"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_balance_nominal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp32"
                android:text="Rp100.000"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="@id/tv_balance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/btn_balance_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_balance_nominal"
                app:layout_constraintBottom_toBottomOf="@id/tv_balance_nominal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_balance_settings"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:layout_marginTop="2dp"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_top_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toStartOf="@id/btn_balance_settings"
                app:layout_constraintTop_toBottomOf="@id/tv_balance"
                app:layout_constraintBottom_toBottomOf="@id/tv_balance_nominal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_top_up"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_up"
                    android:textColor="@color/white"
                    android:layout_marginTop="2dp"
                    android:textSize="10sp"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginTop="12dp"
        android:elevation="0dp"
        app:cardMaxElevation="0dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/cv_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/banner"
            android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>